fix vita-image not showing on mobile by using mediaquery

--- a/_sass/blocks/vita.scss
+++ b/_sass/blocks/vita.scss
@@ -45,11 +45,15 @@
     height: 100%;
 
     &>img {
-      height: 0;
       min-height: 100%;
       object-fit: cover;
       object-position: top;
+
+      @media only screen and (min-width: $vp-large) {
+        height: 0;
+      }
     }
+
   }
 
   @media only screen and (min-width: $vp-large) {
